ajuste cores sobre mim v3

--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -255,7 +255,7 @@ main .sobre_mim h3::after {
   background-color: #4dc8ff;
 }
 main .sobre_mim a {
-  color: #fff;
+  color: #4dc8ff;
   font-weight: 700;
   border-radius: 5px;
   font-size: 18px;
