--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -289,7 +289,7 @@ main {
         }
 
         a {
-            color: $branco;
+            color: $ciano;
             font-weight: 700;
             border-radius: 5px;
             font-size: 18px;
