ajustes finais da v3

--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
-
 $branco: #fff;
 $preto: #000;
 $pretoClaro: #0f0f0f;
@@ -14,7 +12,7 @@ html {
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
 
@@ -84,6 +82,7 @@ body {
             color: $branco;
             font-weight: 700;
             position: relative;
+            z-index: 1000;
 
             &::after {
                 content: "";
@@ -494,6 +493,7 @@ main {
                 background-color: $pretoClaro;
                 border-radius: 20px;
                 padding: 1em;
+                animation: flutuar 3.5s ease-in-out infinite;
 
                 img {
                     width: 100%;
@@ -517,7 +517,7 @@ main {
 
                 p {
                     font-size: 16px;
-                    text-align: justify;
+                    text-align: left;
                     color: $branco;
                     padding: 10px;
                     border-radius: 5px;
@@ -713,12 +713,7 @@ footer {
     p{
         font-size: 18px;
         margin-bottom: 10px;
-    }
-    @keyframes cair {
-        to {
-            opacity: 1;
-            transform: translateY(0);
-        }
+        animation: flutuar 3s ease-in-out infinite;
     }
 }
 
@@ -752,7 +747,7 @@ footer {
                 width: 22px;
                 height: 16px;
                 cursor: pointer;
-                z-index: 6001;
+                z-index: 1011;
                 margin-right: clamp(8px, 2vw, 12px);
                 flex: 0 0 auto;
 
@@ -795,12 +790,17 @@ footer {
                 height: 100vh;
 
                 ul {
-                    flex-direction: column;
+                    position: absolute;
                     gap: 0.5em;
+                    z-index: 1000;
+                    top: 2px;
+                    left: 4px;
+                    align-items: center;
+                    background-color: $preto;
 
                     li a {
-                        padding: 8px;
-                        font-size: clamp(13px, 3.5vw, 14px);
+                        padding: 3px;
+                        font-size: clamp(10px, 3.5vw, 14px);
                         display: block;
                         color: $branco;
                         text-decoration: none;
@@ -874,8 +874,9 @@ footer {
             margin-top: 30px;
 
             img {
-                width: 100%;
+                min-width: 160px;
                 max-width: none;
+
             }
         }
     }
