--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
 html {
   scroll-behavior: smooth;
 }
@@ -6,7 +5,7 @@ html {
 * {
   margin: 0;
   padding: 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Poppins", sans-serif;
   box-sizing: border-box;
 }
 
@@ -70,6 +69,7 @@ body {
   color: #fff;
   font-weight: 700;
   position: relative;
+  z-index: 1000;
 }
 .inicio .menu_inicio .menu_nav li a::after {
   content: "";
@@ -427,6 +427,7 @@ main .projetos .container_projetos ._projeto {
   background-color: #0f0f0f;
   border-radius: 20px;
   padding: 1em;
+  animation: flutuar 3.5s ease-in-out infinite;
 }
 main .projetos .container_projetos ._projeto img {
   width: 100%;
@@ -447,7 +448,7 @@ main .projetos .container_projetos ._projeto small {
 }
 main .projetos .container_projetos ._projeto p {
   font-size: 16px;
-  text-align: justify;
+  text-align: left;
   color: #fff;
   padding: 10px;
   border-radius: 5px;
@@ -617,12 +618,7 @@ footer {
 footer p {
   font-size: 18px;
   margin-bottom: 10px;
-}
-@keyframes cair {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+  animation: flutuar 3s ease-in-out infinite;
 }
 
 @media (max-width: 768px) {
@@ -651,7 +647,7 @@ footer p {
     width: 22px;
     height: 16px;
     cursor: pointer;
-    z-index: 6001;
+    z-index: 1011;
     margin-right: clamp(8px, 2vw, 12px);
     flex: 0 0 auto;
   }
@@ -687,12 +683,17 @@ footer p {
     height: 100vh;
   }
   .inicio .menu_inicio .menu_nav ul {
-    flex-direction: column;
+    position: absolute;
     gap: 0.5em;
+    z-index: 1000;
+    top: 2px;
+    left: 4px;
+    align-items: center;
+    background-color: #000;
   }
   .inicio .menu_inicio .menu_nav ul li a {
-    padding: 8px;
-    font-size: clamp(13px, 3.5vw, 14px);
+    padding: 3px;
+    font-size: clamp(10px, 3.5vw, 14px);
     display: block;
     color: #fff;
     text-decoration: none;
@@ -752,7 +753,7 @@ footer p {
     margin-top: 30px;
   }
   .container_inicio .imagem_inicio img {
-    width: 100%;
+    min-width: 160px;
     max-width: none;
   }
   .sobre_mim {
